# haus

./: .gitignore  Cargo.toml  README.md  Rocket.toml.example  schema.sql
src/: id.rs  main.rs  url.rs
static/: index.html
